<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediaLibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="send_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="share_app_content">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="yandex_offer">"https://yandex.ru/legal/practicum_offer"/</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_mail">winterov@yandex.ru</string>
    <string name="search_hint">Поиск</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_search_result">Ничего не нашлось</string>
    <string name="empty_search_field">Пустой запрос</string>
    <string name="network_not_available_title">Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте \n
        подключение к интернету
    </string>
    <string name="update_button_label">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history_label_button">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="bad_response">"Что то пошло не так!"</string>
    <string name="mediateka">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали
        ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
</resources>