<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_maker" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <Button
            style="@style/button_main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/search"
            android:text="@string/search">
        </Button>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <Button
            style="@style/button_main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/mediateka"
            android:text="@string/mediateka">
        </Button>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <Button
            style="@style/button_main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/settings"
            android:text="@string/settings">
        </Button>
    </FrameLayout>
</LinearLayout>