<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/common_ll.settingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen24dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/header.settingsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen12dp"
            android:clickable="true"
            android:text="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/text_view_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64dp"
        android:layout_gravity="start"
        app:trackTint="@color/switchTrackColor"
        app:thumbTint="@color/switchKnobColor"
        android:text="@string/black_theme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64dp">

        <TextView
            style="@style/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/share" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:clickable="true"
            android:contentDescription="@string/share"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64dp">

        <TextView
            style="@style/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/send_support" />

        <ImageView
            android:id="@+id/support_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:clickable="true"
            android:contentDescription="@string/send_support"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64dp">

        <TextView
            style="@style/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/offer_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:clickable="true"
            android:contentDescription="@string/send_support"
            android:src="@drawable/right_arrow" />
    </FrameLayout>
</LinearLayout>